--- a/public/styles.css
+++ b/public/styles.css
@@ -108,13 +108,12 @@ form .form-row:nth-child(odd) {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    border: 5px solid purple;
     margin-bottom: 2em; }
     .ledger-container .cols {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 80%;
+      width: 90%;
       margin-bottom: 1.5em; }
       .ledger-container .cols .header {
         width: 70%;
@@ -124,18 +123,19 @@ form .form-row:nth-child(odd) {
         align-items: center;
         font-size: 2em; }
     .ledger-container .line-items-container {
-      width: 80%;
+      width: 90%;
       min-height: 20vh;
       margin: 1em 0;
-      border: 1px solid gold;
       display: flex;
       flex-wrap: wrap;
       justify-content: center; }
-    .ledger-container .additem-btn {
-      width: 50%;
-      height: 70px;
-      border-radius: 10px;
-      font-size: 1.5em; } }
+  .additem-btn {
+    width: 220px;
+    height: 70px;
+    border-radius: 10px;
+    font-size: 1.5em;
+    display: block;
+    margin: 0 auto 1.5em; } }
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   .ledger-container {
@@ -189,10 +189,10 @@ form .form-row:nth-child(odd) {
 @media only screen and (max-width: 480px) {
   .line-item {
     width: 100%;
-    height: 300px;
-    margin-bottom: 1.5em; }
+    margin-bottom: 1.5em;
+    border: 1px solid grey; }
   .line-item-field {
-    height: 25%;
+    height: 75px;
     font-size: 1.5em;
     overflow: scroll;
     display: flex;
